--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body,
 html {
-  width: 100%;
   height: 100%;
 }
 
@@ -9,7 +8,7 @@ body {
   margin: 0;
 }
 
-.btn--run {
+.btn {
   display: none;
 }
 
@@ -17,12 +16,20 @@ body {
   content: 'RUN';
 }
 
+.btn__zoom--out::before {
+  content: '-';
+}
+
+.btn__zoom--in::before {
+  content: '+';
+}
+
 .playing .btn--run::before {
   content: 'STOP';
 }
 
 @media (any-pointer: coarse) {
-  .btn--run {
+  .btn {
     display: block;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -33,5 +40,15 @@ body {
     background-color: hsl(0deg 0% 20% / 66%);
     padding: 0.5rem 1rem;
     font-size: .75rem;
+  }
+
+  .btn__zoom--out {
+    left: initial;
+    right: 3rem;
+  }
+
+  .btn__zoom--in {
+    left: initial;
+    right: 0rem;
   }
 }
