--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,10 @@ body {
 
 .ui__center {
   display: flex;
-  align-self: center;
+  position: absolute;
   justify-content: space-between;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .ui__right {
